--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -24,9 +24,9 @@ Vagrant.configure("2") do |config|
     end
   end
 
-  # Update to have the latest packages, remove if you don't need that
-  config.vm.provision :shell, :inline => "apt-get update"
-  config.vm.provision :shell, :inline => "DEBIAN_FRONTEND=noninteractive apt-get dist-upgrade --yes"
+  # Update to have the latest packages, enable if you want that
+  # config.vm.provision :shell, :inline => "apt-get update"
+  # config.vm.provision :shell, :inline => "DEBIAN_FRONTEND=noninteractive apt-get dist-upgrade --yes"
 
   # Ready :-)
 end
