--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant.configure("2") do |config|
   # Use a basic desktop image 
   [:precise, :quantal, :raring, :saucy, :trusty].each do |release|
     config.vm.define "test-#{release}-desktop-i386" do |conf|
-      conf.vm.box = "#{release}-cloud-i386"
+      conf.vm.box = "#{release}-desktop-i386"
     end
     config.vm.define "test-#{release}-desktop-amd64" do |conf|
       conf.vm.box = "#{release}-desktop-amd64"
