--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -4,7 +4,8 @@
 Vagrant.configure("2") do |config|
 
   # Use a basic desktop image 
-  [:precise, :quantal, :raring, :saucy, :trusty].each do |release|
+  # Quantal is broken
+  [:precise, :raring, :saucy, :trusty].each do |release|
     config.vm.define "test-#{release}-desktop-i386" do |conf|
       conf.vm.box = "#{release}-desktop-i386"
     end
